# volk-sfmt

./: .gitignore  CMakeLists.txt  README  README.md  volk_sfmt.pc.in
apps/: CMakeLists.txt  volk_sfmt-config-info.cc  volk_sfmt_profile.cc  volk_sfmt_profile.h
cmake/Modules/: VolkConfig.cmake
docs/: extending_volk_sfmt.dox  kernels.dox  terms_and_techniques.dox  using_volk_sfmt.dox
examples/: README
examples/arch_makepkg/: PKGBUILD
examples/debug/: Makefile  debug  debug.cc
examples/dsfmt_example_usage/: README  example_use_volk.cc
examples/dsfmt_reference_impl/: README
examples/dsfmt_runtime_eval/: Makefile  runtime  runtime.cc
examples/dsfmt_test/: Makefile  dsfmt_test  dsfmt_test.cc
examples/example_usage/: Makefile  example_use_volk.cc
examples/reference_impl/: README
examples/runtime_eval/: Makefile  README  runtime.cc
examples/sfmt_example_usage/: README
examples/sfmt_reference_impl/: README
examples/sfmt_runtime_eval/: Makefile  runtime.cc
include/volk_sfmt/: constants.h  volk_sfmt_common.h  volk_sfmt_complex.h  volk_sfmt_malloc.h  volk_sfmt_prefs.h  volk_sfmt_sse2_intrinsics.h
kernels/: README.txt
kernels/volk_sfmt/: volk_sfmt_32f_boxmuller_32f.h  volk_sfmt_32f_boxmullerpuppet_32f.h  volk_sfmt_32f_null_32f.h  volk_sfmt_32u_genrand.h  volk_sfmt_32u_genrand_array_32u.h  volk_sfmt_32u_genrand_arraypuppet_32u.h  volk_sfmt_32u_genrand_init.h  volk_sfmt_32u_genrandpuppet_32u.h  volk_sfmt_64f_genrand.h  volk_sfmt_64f_genrand_init.h  volk_sfmt_64f_genrandpuppet_64f.h
kernels/volk_sfmt/asm/orc/: volk_sfmt_16sc_magnitude_32f_aligned16_orc_impl.orc
lib/: CMakeLists.txt  constants.c.in  kernel_tests.h  qa_utils.cc  qa_utils.h  testqa.cc  volk_sfmt_malloc.c  volk_sfmt_prefs.c  volk_sfmt_rank_archs.c  volk_sfmt_rank_archs.h
python/volk_sfmt_modtool/: CMakeLists.txt  README  __init__.py  cfg.py  volk_sfmt_modtool  volk_sfmt_modtool_generate.py
tmpl/: volk_sfmt.tmpl.c  volk_sfmt.tmpl.h  volk_sfmt_cpu.tmpl.c  volk_sfmt_cpu.tmpl.h  volk_sfmt_machine_xxx.tmpl.c  volk_sfmt_machines.tmpl.c  volk_sfmt_machines.tmpl.h  volk_sfmt_typedefs.tmpl.h
